--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "target": "ES2021",
     "checkJs": true,
     "allowJs": true
-  }
+  },
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
+
