--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            # Free up disk space by removing unnecessary files
+            sudo rm -rf /tmp/*
+
             # Install Node.js and npm on the EC2 instance
             sudo apt-get update
             sudo apt-get install -y nodejs npm
@@ -51,7 +54,9 @@ jobs:
             npm install
             npm run build
 
-            # Start the application using PM2
+            # Install PM2
             sudo npm install -g pm2
+
+            # Start the application using PM2
             pm2 startup ubuntu
             pm2 startOrRestart my-strapi-project
